--- a/.github/workflows/cleanClosedPR.yml
+++ b/.github/workflows/cleanClosedPR.yml
@@ -65,6 +65,14 @@ jobs:
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
+      # Clean the queue deployment artifacts
+      - name: Clean Queue Deployment
+        working-directory: "./api/.pipeline/"
+        run: |
+          npm install --only=production
+          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
+          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
+
       # Clean the app deployment artifacts
       - name: Clean APP Deployment
         working-directory: "./app/.pipeline/"
