--- a/api/.pipeline/package.json
+++ b/api/.pipeline/package.json
@@ -14,9 +14,10 @@
   "scripts": {
     "build": "node scripts/api.build.js",
     "deploy": "node scripts/api.deploy.js",
+    "clean": "node scripts/clean.js",
     "queue:build": "node scripts/queue.build.js",
     "queue:deploy": "node scripts/queue.deploy.js",
-    "clean": "node scripts/clean.js",
+    "queue:clean": "node scripts/queue.clean.js",
     "lint": "eslint . --ignore-pattern 'node_modules' --ext .js,.ts",
     "lint-fix": "eslint . --fix --ignore-pattern 'node_modules' --ext .js,.ts",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,scss}\"",
