--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
     "start-reload": "./node_modules/.bin/nodemon src/app.ts --exec ts-node",
     "migrate-latest": "knex migrate-latest",
     "migrate-rollback": "knex migrate-rollback",
-    "test": "mocha --timeout 10000",
+    "test": "mocha",
     "test-watch": "mocha --watch",
     "coverage": "nyc mocha",
     "lint": "eslint . --ignore-pattern 'node_modules' --ext .ts",
