BHBC-2168: Queue Scheduler Process (#159)
BHBC-2168: job queue scheduler

--- a/api/Dockerfile.queue
+++ b/api/Dockerfile.queue
@@ -30,7 +30,5 @@ COPY . ./
 # Application VOLUME
 VOLUME ${HOME}
 
-EXPOSE 6100
-
 # Application Entry point
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "queue"]
