Update postgres configs from updates in SIMS

--- a/Containers/postgres12-postgis31/rhel7.rh-postgresql12/Dockerfile
+++ b/Containers/postgres12-postgis31/rhel7.rh-postgresql12/Dockerfile
@@ -1,5 +1,5 @@
-FROM artifacts.developer.gov.bc.ca/redhat-docker-remote/rhel8/postgresql-12:latest
-# registry.redhat.io/rhscl/postgresql-12-rhel8
+FROM registry.redhat.io/rhscl/postgresql-12-rhel7
+# FROM registry.redhat.io/rhscl/postgresql-13-rhel7
 
 # PostgreSQL image for OpenShift with PostGIS extension.
 # Volumes:
@@ -19,10 +19,10 @@ ENV POSTGIS_EXTENSION=N \
     PGUSER=postgres \
     LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 \
     APP_DATA=/opt/app-root
-
+    
 ENV POSTGISV 3
 ENV TZ America/Vancouver
-ENV PORT 5432
+ENV PORT 5432 
 
 ENV SUMMARY="PostgreSQL is an advanced Object-Relational database management system" \
     DESCRIPTION="PostgreSQL is an advanced Object-Relational database management system (DBMS). \
@@ -35,7 +35,7 @@ LABEL summary=$SUMMARY \
       io.k8s.display-name="PostgreSQL $POSTGRESQL_VERSION" \
       io.openshift.expose-services="5432:postgresql" \
       io.openshift.tags="database,postgresql,postgresql$POSTGRESQL_VERSION,rh-postgresql$POSTGRESQL_VERSION,postgis,postgis$POSTGISV" \
-      name="rhscl/postgresql-$POSTGRESQL_VERSION-rhel8" \
+      name="rhscl/postgresql-$POSTGRESQL_VERSION-rhel7" \
       com.redhat.component="rh-postgresql$POSTGRESQL_VERSION-container" \
       version="1" \
       release="1" \
@@ -43,29 +43,49 @@ LABEL summary=$SUMMARY \
       usage="podman run -d --name postgresql_database -e POSTGRESQL_USER=user -e POSTGRESQL_PASSWORD=pass -e POSTGRESQL_DATABASE=db -p 5432:5432 rhscl/postgresql-$POSTGRESQL_VERSION-rhel7" \
       maintainer="SoftwareCollections.org <sclorg@redhat.com>"
 
-USER root
+USER 0
 
-COPY root/usr/libexec/fix-permissions /usr/libexec/fix-permissions
+# COPY root/usr/libexec/fix-permissions /usr/libexec/fix-permissions
 
-RUN yum repolist > /dev/null && \
+# Copy entitlements and subscription manager configurations
+# https://github.com/BCDevOps/OpenShift4-Migration/issues/15
+COPY ./etc-pki-entitlement /etc/pki/entitlement
+COPY ./rhsm-conf /etc/rhsm
+COPY ./rhsm-ca /etc/rhsm/ca
+
+# This image must forever use UID 26 for postgres user so our volumes are
+# safe in the future. This should *never* change, the last test is there
+# to make sure of that.
+# rhel-7-server-ose-3.2-rpms is enabled for nss_wrapper until this pkg is
+# in base RHEL
+#
+# We need to call 2 (!) yum commands before being able to enable repositories properly
+# This is a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1479388
+# Initialize /etc/yum.repos.d/redhat.repo
+# See https://access.redhat.com/solutions/1443553
+RUN rm /etc/rhsm-host && \
+    yum repolist > /dev/null && \
     yum install -y yum-utils gettext && \
     yum-config-manager --disable \* &> /dev/null && \
-    yum-config-manager --enable rhel-server-rhscl-8-rpms && \
-    yum-config-manager --enable rhel-8-server-rpms && \
-    yum-config-manager --enable rhel-8-server-optional-rpms && \
+    yum-config-manager --enable rhel-server-rhscl-7-rpms && \
+    yum-config-manager --enable rhel-7-server-rpms && \
+    yum-config-manager --enable rhel-7-server-optional-rpms && \
     INSTALL_PKGS="rsync tar gettext bind-utils nss_wrapper" && \
     INSTALL_PKGS="$INSTALL_PKGS rh-postgresql$POSTGRESQL_VERSION-pgaudit" && \
     yum -y --setopt=tsflags=nodocs install $INSTALL_PKGS && \
-    rpm -V $INSTALL_PKGS && \
-    yum -y clean all --enablerepo='*' && \
-    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
-    localedef -f UTF-8 -i en_US en_US.UTF-8 && \
-    test "$(id postgres)" = "uid=26(postgres) gid=26(postgres) groups=26(postgres)" && \
-    mkdir -p /var/lib/pgsql/data && \
-    /usr/libexec/fix-permissions /var/lib/pgsql /var/run/postgresql
+    rpm -V $INSTALL_PKGS
+
+RUN yum -y clean all --enablerepo='*'
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN localedef -f UTF-8 -i en_US en_US.UTF-8
+
+RUN usermod -G "" postgres
+RUN test "$(id postgres)" = "uid=26(postgres) gid=26(postgres) groups=26(postgres)"
+RUN mkdir -p /var/lib/pgsql/data
+RUN /usr/libexec/fix-permissions /var/lib/pgsql /var/run/postgresql
 
 RUN touch /etc/yum/pluginconf.d/rhnplugin.conf && \
-    echo  exclude=postgresql* >> /etc/yum/pluginconf.d/rhnplugin.conf
+    echo  exclude=postgresql* >> /etc/yum/pluginconf.d/rhnplugin.conf    
 
 RUN bash /usr/libexec/fix-permissions /var/run/postgresql
 
@@ -82,22 +102,35 @@ ENV BASH_ENV=${CONTAINER_SCRIPTS_PATH}/scl_enable \
 
 VOLUME ["/var/lib/pgsql/data", "/var/run/postgresql"]
 
-COPY root /
+# COPY root /
 ENV PGCONFIG /opt/rh/rh-postgresql12/root/usr/bin
 ENV PATH /opt/rh/rh-postgresql12/root/usr/bin/:/usr/bin/:${PATH}
 
 # Aquire and build PostGIS 3.1, for PostgreSQL 12.x
 RUN cd /tmp && \
-    rpm -ivh https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm && \
-    yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+    rpm -ivh https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm && \
+    yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
 
-RUN yum install -y postgis31_12 postgis31_12-client pgrouting_12
+RUN yum -y remove rh-postgresql12-postgresql-server-syspaths rh-postgresql12-postgresql-contrib-syspaths rh-postgresql12-postgresql-syspaths
+RUN yum install -y postgis31_12
+RUN yum install -y postgis31_12-client
+RUN yum install -y pgrouting_12
 
-RUN /usr/bin/install -c -m 755  /usr/pgsql-12/lib/* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
-    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
-    mv /usr/pgsql-12/share/contrib/postgis-3.1/ /opt/rh/rh-postgresql12/root/usr/share/pgsql/contrib/
-
+RUN /usr/bin/install -c -m 755  /usr/pgsql-12/lib/postgis* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
+    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/libpgrouting* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
+    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/pgcrypto* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
+    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/fuzzystrmatch* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \    
+    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/postgis* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
+    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/pgrouting* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
+    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/pgcrypto* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
+    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/fuzzystrmatch* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
+    mv /usr/pgsql-12/share/contrib/postgis-3.1/ /opt/rh/rh-postgresql12/root/usr/share/pgsql/contrib/ 
+   
 RUN rm -rf /tmp/pgdg-redhat-repo-latest.noarch.rpm /var/cache/yum
+
+# Remove entitlements and Subscription Manager configs
+RUN rm -rf /etc/pki/entitlement && \
+    rm -rf /etc/rhsm/rhsm-conf && rm -fr /etc/rhsm/ca
 
 RUN bash /usr/libexec/fix-permissions /var/lib/pgsql
 
