--- a/database/.pipeline/templates/db.setup.bc.yaml
+++ b/database/.pipeline/templates/db.setup.bc.yaml
@@ -40,6 +40,14 @@ parameters:
   - name: SOURCE_IMAGE_TAG
     required: true
     value: 14-ubi8
+  - name: CPU_REQUEST
+    value: '100m'
+  - name: CPU_LIMIT
+    value: '1000m'
+  - name: MEMORY_REQUEST
+    value: '512Mi'
+  - name: MEMORY_LIMIT
+    value: '1.5Gi'
 objects:
   - kind: ImageStream
     apiVersion: v1
@@ -90,12 +98,12 @@ objects:
           name: '${NAME}:${VERSION}'
       postCommit: {}
       resources:
-        limits:
-          cpu: '1'
-          memory: 1.5Gi
         requests:
-          cpu: 100m
-          memory: 512Mi
+          cpu: ${CPU_REQUEST}
+          memory: ${MEMORY_REQUEST}
+        limits:
+          cpu: ${CPU_LIMIT}
+          memory: ${MEMORY_LIMIT}
       runPolicy: SerialLatestOnly
       source:
         contextDir: '${SOURCE_CONTEXT_DIR}'
