--- a/.github/workflows/addComments.yml
+++ b/.github/workflows/addComments.yml
@@ -3,7 +3,7 @@ name: Add Comments
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 jobs:
   addOpenshiftURLComment:
