--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -1,4 +1,4 @@
-name: Linting Checks
+name: Linting and Formatting Checks
 
 on:
   pull_request:
@@ -13,24 +13,25 @@ jobs:
   checkoutRepo:
     name: Checkout and cache target branch
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     env:
       PR_NUMBER: ${{ github.event.number }}
     steps:
       # Install Node - for `node` and `npm` commands
       # Note: This already uses actions/cache internally, so repeat calls in subsequent jobs are not a performance hit
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
 
       - name: Checkout Target Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
 
       # Cache the repo
       - name: Cache repo
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-repo
         env:
           cache-name: cache-repo
@@ -38,86 +39,37 @@ jobs:
           # Cache repo based on the commit sha that triggered the workflow
           path: ${{ github.workspace }}/*
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-  lintDatabase:
-    name: Running Database Linter
+  lintAndFormat:
+    name: Running Linter and Formatter
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     needs:
       - checkoutRepo
     steps:
       - name: Setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
 
       # Load repo from cache
       - name: Cache repo
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-repo
         env:
           cache-name: cache-repo
         with:
           path: ${{ github.workspace }}/*
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
       # Checkout the branch if not restored via cache
       - name: Checkout Target Branch
         if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Cache database node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-database-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
-      - name: Install database dependencies
-        working-directory: database
-        run: npm install
-
-      - name: Run database linter
-        working-directory: database
-        run: CI=true npm run lint
-
-  lintAPI:
-    name: Running API Linter
-    runs-on: ubuntu-latest
-    needs:
-      - checkoutRepo
-    steps:
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v2
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
-
+      # api
       - name: Cache api node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-api-node-modules
         with:
@@ -135,36 +87,13 @@ jobs:
         working-directory: api
         run: CI=true npm run lint
 
-  lintAPP:
-    name: Running APP Linter
-    runs-on: ubuntu-latest
-    needs:
-      - checkoutRepo
-    steps:
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
+      - name: Run api formater
+        working-directory: api
+        run: CI=true npm run format
 
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v2
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
-
+      # app
       - name: Cache app node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-app-node-modules
         with:
@@ -181,3 +110,31 @@ jobs:
       - name: Run app linter
         working-directory: app
         run: CI=true npm run lint
+
+      - name: Run app formater
+        working-directory: app
+        run: CI=true npm run format
+
+      # database
+      - name: Cache database node modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-database-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      - name: Install database dependencies
+        working-directory: database
+        run: npm install
+
+      - name: Run database linter
+        working-directory: database
+        run: CI=true npm run lint
+
+      - name: Run database formatter
+        working-directory: database
+        run: CI=true npm run format
