--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,24 +16,25 @@ jobs:
   checkoutRepo:
     name: Checkout and cache target branch
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     env:
       PR_NUMBER: ${{ github.event.number }}
     steps:
       # Install Node - for `node` and `npm` commands
       # Note: This already uses actions/cache internally, so repeat calls in subsequent jobs are not a performance hit
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
 
       - name: Checkout Target Branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
 
       # Cache the repo
       - name: Cache repo
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-repo
         env:
           cache-name: cache-repo
@@ -41,39 +42,37 @@ jobs:
           # Cache repo based on the commit sha that triggered the workflow
           path: ${{ github.workspace }}/*
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-  testAPI:
-    name: Running API Tests
+  test:
+    name: Running Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     needs:
       - checkoutRepo
     steps:
       - name: Setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
 
       # Load repo from cache
       - name: Cache repo
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-repo
         env:
           cache-name: cache-repo
         with:
           path: ${{ github.workspace }}/*
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
       # Checkout the branch if not restored via cache
       - name: Checkout Target Branch
         if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
+      # api
       - name: Cache api node modules
-        uses: actions/cache@v2.1.6
+        uses: actions/cache@v3
         env:
           cache-name: cache-api-node-modules
         with:
@@ -92,41 +91,14 @@ jobs:
         run: CI=true npm run coverage
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.1.0
+        uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           fail_ci_if_error: false
 
-  testAPP:
-    name: Running APP Tests
-    runs-on: ubuntu-latest
-    needs:
-      - checkoutRepo
-    steps:
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v2
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v2
-
+      # app
       - name: Cache app node modules
-        uses: actions/cache@v2.1.6
+        uses: actions/cache@v3
         env:
           cache-name: cache-app-node-modules
         with:
@@ -145,7 +117,7 @@ jobs:
         run: CI=true npm run coverage
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.1.0
+        uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           fail_ci_if_error: false
