--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "build": "react-app-rewired build",
     "deploy_start": "node server",
     "test": "react-scripts test --ci --watchAll=false --runInBand",
-    "test:watch": "react-scripts test",
+    "test-watch": "react-scripts test",
     "coverage": "react-scripts test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
     "update-snapshots": "react-scripts test --ci --watchAll=false --updateSnapshot",
     "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
