Additional git action cleanup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -631,6 +631,7 @@ jobs:
   deployQueue:
     name: Deploy Queue Image
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     if: |
       always() &&
       (needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped') &&
