--- a/.github/workflows/backup/deploy.yml
+++ b/.github/workflows/backup/deploy.yml
@@ -104,18 +104,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v2
 
-      # Cache Node modules
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -126,7 +114,7 @@ jobs:
       - name: Build GeoServer Image
         working-directory: "./geoserver/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run build -- --pr=$PR_NUMBER
 
   # Deploy GeoServer image
@@ -165,18 +153,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v2
 
-      # Cache Node modules
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -187,5 +163,5 @@ jobs:
       - name: Deploy GeoServer Image
         working-directory: "./geoserver/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=dev
