--- a/.github/workflows/cleanClosedPR.yml
+++ b/.github/workflows/cleanClosedPR.yml
@@ -44,6 +44,8 @@ jobs:
           persist-credentials: false
 
       # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
       - name: Log in to OpenShift
         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
@@ -51,7 +53,7 @@ jobs:
       - name: Clean APP Deployment
         working-directory: "app/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
@@ -59,7 +61,7 @@ jobs:
       - name: Clean Database Artifacts
         working-directory: "database/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
@@ -67,7 +69,7 @@ jobs:
       - name: Clean API Deployment
         working-directory: "api/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
@@ -75,7 +77,7 @@ jobs:
       - name: Clean Queue Deployment
         working-directory: "./api/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
 
