--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -118,18 +118,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache app pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-app-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('app/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -139,7 +127,7 @@ jobs:
       # Install app pipeline node modules
       - name: Install app pipeline node modules
         working-directory: "app/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Build the app image
       - name: Build APP Image
@@ -180,18 +168,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache database pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-database-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -201,7 +177,7 @@ jobs:
       # Install database pipeline node modules
       - name: Install database pipeline node modules
         working-directory: "database/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Build the database image
       - name: Build Database Image
@@ -242,18 +218,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache database pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-database-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -263,7 +227,7 @@ jobs:
       # Install database pipeline node modules
       - name: Install database pipeline node modules
         working-directory: "database/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Build the database image
       - name: Build Database Setup Image
@@ -304,18 +268,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache api pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-api-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('api/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -325,7 +277,7 @@ jobs:
       # Install api pipeline node modules
       - name: Install api pipeline node modules
         working-directory: "api/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Build the api image
       - name: Build API Image
@@ -365,18 +317,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache api pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-api-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('api/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -386,7 +326,7 @@ jobs:
       # Install api pipeline node modules
       - name: Install api pipeline node modules
         working-directory: "api/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Build the queue image
       - name: Build Queue Image
@@ -428,18 +368,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache app pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-app-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('app/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -449,7 +377,7 @@ jobs:
       # Install app pipeline node modules
       - name: Install app pipeline node modules
         working-directory: "app/.pipeline"
-        run: npm install --only=production
+        run: npm ci
 
       # Deploy the app image
       - name: Deploy APP Image
@@ -491,18 +419,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache database pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-database-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -512,7 +428,7 @@ jobs:
       # Install database pipeline node modules
       - name: Install database pipeline node modules
         working-directory: "database/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Deploy the database image
       - name: Deploy Database Image
@@ -555,18 +471,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache database pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-database-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -576,7 +480,7 @@ jobs:
       # Install database pipeline node modules
       - name: Install database pipeline node modules
         working-directory: "database/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Deploy the database setup image
       - name: Deploy Database Setup Image
@@ -619,18 +523,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache api pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-api-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('api/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -640,7 +532,7 @@ jobs:
       # Install api pipeline node modules
       - name: Install api pipeline node modules
         working-directory: "api/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Deploy the api image
       - name: Deploy API Image
@@ -682,18 +574,6 @@ jobs:
         if: steps.cache-repo.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
-      # Cache Node modules
-      - name: Cache api pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-api-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('api/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Log in to OpenShift.
       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
@@ -703,13 +583,13 @@ jobs:
       # Install api pipeline node modules
       - name: Install api pipeline node modules
         working-directory: "api/.pipeline/"
-        run: npm install --only=production
+        run: npm ci
 
       # Deploy the queue image
       - name: Deploy Queue Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run queue:deploy -- --pr=$PR_NUMBER --env=$BRANCH --branch=$BRANCH --type=static
 
   # Clean build/deployment artifacts
@@ -754,65 +634,37 @@ jobs:
       - name: Log in to OpenShift
         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
-      # Cache Node modules
-      - name: Cache app pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-app-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('app/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
       # Clean the app deployment artifacts
       - name: Clean APP Deployment
         working-directory: "app/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
-
-      # Cache Node modules
-      - name: Cache database pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-database-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('database/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       # Clean the database build/deployment artifacts
       - name: Clean Database Artifacts
         working-directory: "database/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
-
-      # Cache Node modules
-      - name: Cache api pipeline node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-api-pipeline-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('api/.pipeline/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
 
       # Clean the api deployment artifacts
       - name: Clean API Deployment
         working-directory: "api/.pipeline/"
         run: |
-          npm install --only=production
+          npm ci
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
+
+      # Clean the queue deployment artifacts
+      - name: Clean Queue Deployment
+        working-directory: "./api/.pipeline/"
+        run: |
+          npm ci
+          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
+          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
 
       # Clean the reamaining build/deployment artifacts
       - name: Clean remaining Artifacts
@@ -821,4 +673,3 @@ jobs:
         run: |
           oc --namespace a0ec71-dev   get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep $POD_SELECTOR | grep $PR_NUMBER | awk '{print "oc delete --ignore-not-found " $1}' | bash
           oc --namespace a0ec71-tools get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep $POD_SELECTOR | grep $PR_NUMBER | awk '{print "oc delete --ignore-not-found " $1}' | bash
-
