--- a/app/.pipeline/templates/app.dc.yaml
+++ b/app/.pipeline/templates/app.dc.yaml
@@ -14,6 +14,9 @@ parameters:
   - name: HOST
   - name: CHANGE_ID
     value: '0'
+  - name: REACT_APP_API_HOST
+    description: API host for application backend
+    value: ''
   - name: REACT_APP_SITEMINDER_LOGOUT_URL
     description: Siteminder URL to log out and clear the session for the logged in user
     value: ''
