--- a/api/.pipeline/templates/queue.dc.yaml
+++ b/api/.pipeline/templates/queue.dc.yaml
@@ -26,11 +26,15 @@ parameters:
   - name: ELASTICSEARCH_URL
     description: Platform Elasticsearch URL
     required: true
-    value: 'https://elasticsearch-a0ec71-dev.apps.silver.devops.gov.bc.ca'
+    value: 'http://es01:9200'
   - name: ELASTICSEARCH_EML_INDEX
     description: Platform Elasticsearch index for EML data
     required: true
     value: 'eml'
+  - name: ELASTICSEARCH_TAXONOMY_INDEX
+    description: Platform Elasticsearch Taxonomy Index
+    required: true
+    vale: 'taxonomy_3.0.0'
   - name: S3_KEY_PREFIX
     description: S3 key optional prefix
     required: false
@@ -175,6 +179,8 @@ objects:
                   value: ${ELASTICSEARCH_URL}
                 - name: ELASTICSEARCH_EML_INDEX
                   value: ${ELASTICSEARCH_EML_INDEX}
+                - name: ELASTICSEARCH_TAXONOMY_INDEX
+                  value: ${ELASTICSEARCH_TAXONOMY_INDEX}
                 - name: S3_KEY_PREFIX
                   value: ${S3_KEY_PREFIX}
                 - name: TZ
