BugFix: Add missing env vars to pipeline (#168)
* Add missing elastic search env to queue pipeline
* Update some replica/resource amounts
* Misc cleanup

--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -38,11 +38,15 @@ parameters:
   - name: ELASTICSEARCH_URL
     description: Platform Elasticsearch URL
     required: true
-    value: 'https://elasticsearch-a0ec71-dev.apps.silver.devops.gov.bc.ca'
+    value: 'http://es01:9200'
   - name: ELASTICSEARCH_EML_INDEX
     description: Platform Elasticsearch index for EML data
     required: true
     value: 'eml'
+  - name: ELASTICSEARCH_TAXONOMY_INDEX
+    description: Platform Elasticsearch Taxonomy Index
+    required: true
+    vale: 'taxonomy_3.0.0'
   - name: S3_KEY_PREFIX
     description: S3 key optional prefix
     required: false
@@ -83,8 +87,6 @@ parameters:
   - name: OBJECT_STORE_SECRETS
     description: Secrets used to read and write to the S3 storage
     value: 'biohubbc-object-store'
-  - name: LOG_LEVEL
-    value: 'info'
   - name: GCNOTIFY_API_SECRET
     description: Secret for gcnotify api key
     value: 'gcnotify-api-key'
@@ -101,6 +103,8 @@ parameters:
     value: https://api.notification.canada.ca/v2/notifications/email
   - name: GCNOTIFY_SMS_URL
     value: https://api.notification.canada.ca/v2/notifications/sms
+  - name: LOG_LEVEL
+    value: 'info'
   - name: CPU_REQUEST
     value: '100m'
   - name: CPU_LIMIT
@@ -114,8 +118,8 @@ parameters:
   - name: REPLICAS_MAX
     value: '1'
 objects:
-  - apiVersion: image.openshift.io/v1
-    kind: ImageStream
+  - kind: ImageStream
+    apiVersion: image.openshift.io/v1
     metadata:
       annotations:
         description: Nodejs Runtime Image
@@ -127,8 +131,8 @@ objects:
     spec:
       lookupPolicy:
         local: false
-  - apiVersion: apps.openshift.io/v1
-    kind: DeploymentConfig
+  - kind: DeploymentConfig
+    apiVersion: apps.openshift.io/v1
     metadata:
       annotations:
         openshift.io/generated-by: OpenShiftWebConsole
@@ -220,6 +224,8 @@ objects:
                   value: ${ELASTICSEARCH_URL}
                 - name: ELASTICSEARCH_EML_INDEX
                   value: ${ELASTICSEARCH_EML_INDEX}
+                - name: ELASTICSEARCH_TAXONOMY_INDEX
+                  value: ${ELASTICSEARCH_TAXONOMY_INDEX}
                 - name: S3_KEY_PREFIX
                   value: ${S3_KEY_PREFIX}
                 - name: TZ
@@ -327,20 +333,20 @@ objects:
       replicas: 0
       unavailableReplicas: 0
       updatedReplicas: 0
-  - apiVersion: v1
+  - kind: Secret
+    apiVersion: v1
     stringData:
       database-name: ''
       database-user-api-password: ''
       database-user-api: ''
-    kind: Secret
     metadata:
       annotations:
         as-copy-of: ${DB_SERVICE_NAME}
       creationTimestamp: null
       name: ${NAME}${SUFFIX}
     type: Opaque
-  - apiVersion: v1
-    kind: Service
+  - kind: Service
+    apiVersion: v1
     metadata:
       annotations: null
       creationTimestamp: null
@@ -358,8 +364,8 @@ objects:
       type: ClusterIP
     status:
       loadBalancer: {}
-  - apiVersion: route.openshift.io/v1
-    kind: Route
+  - kind: Route
+    apiVersion: route.openshift.io/v1
     metadata:
       annotations: {}
       creationTimestamp: null
@@ -379,8 +385,8 @@ objects:
       wildcardPolicy: None
     status:
       ingress: null
-  - apiVersion: autoscaling/v1
-    kind: HorizontalPodAutoscaler
+  - kind: HorizontalPodAutoscaler
+    apiVersion: autoscaling/v1
     metadata:
       annotations: {}
       creationTimestamp: null
