--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - NODE_ENV=${NODE_ENV}
       - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
+      - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
       - S3_KEY_PREFIX=${S3_KEY_PREFIX}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
@@ -99,6 +100,7 @@ services:
       - NODE_ENV=${NODE_ENV}
       - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
+      - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
       - S3_KEY_PREFIX=${S3_KEY_PREFIX}
       - TZ=${API_TZ}
       - DB_HOST=${DB_HOST}
