* Add S3_KEY_PREFIX to pipeline * Update S3 key generation functions * Tweak S3 key paths * Add/update tests * A few misc tweaks/cleanups

--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -50,7 +50,7 @@ parameters:
   - name: S3_KEY_PREFIX
     description: S3 key optional prefix
     required: false
-    value: 'platform'
+    value: 'biohub'
   - name: TZ
     description: Application timezone
     required: false
