--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,8 @@ services:
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
       - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
       - S3_KEY_PREFIX=${S3_KEY_PREFIX}
+      - API_HOST=${API_HOST}
+      - API_PORT=${API_PORT}
       - TZ=${API_TZ}
       - DB_HOST=${DB_HOST}
       - DB_USER_API=${DB_USER_API}
