--- a/api/package.json
+++ b/api/package.json
@@ -38,9 +38,10 @@
     "db-migrate-pg": "~1.2.2",
     "express": "~4.17.1",
     "express-openapi": "~9.3.0",
-    "fast-xml-parser": "^4.0.8",
+    "fast-xml-parser": "~4.1.3",
     "fastq": "^1.15.0",
-    "jsonpath": "~1.1.1",
+    "fast-json-patch": "~3.1.1",
+    "jsonpath-plus": "~7.2.0",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
     "knex": "~2.4.2",
@@ -53,7 +54,6 @@
     "p-queue": "^7.3.3",
     "pg": "~8.7.1",
     "qs": "~6.10.1",
-    "rxjs": "~7.8.0",
     "sql-template-strings": "~2.2.2",
     "object-inspect": "~1.12.3",
     "swagger-ui-express": "~4.3.0",
@@ -70,7 +70,6 @@
     "@types/express": "~4.17.13",
     "@types/geojson": "~7946.0.8",
     "@types/gulp": "~4.0.9",
-    "@types/jsonpath": "~0.2.0",
     "@types/jsonwebtoken": "~8.5.5",
     "@types/lodash": "~4.14.176",
     "@types/mime": "~2.0.3",
