--- a/app/.pipeline/package.json
+++ b/app/.pipeline/package.json
@@ -26,7 +26,7 @@
     "lodash.isfunction": "^3.0.9",
     "lodash.isplainobject": "^4.0.6",
     "lodash.isstring": "^4.0.1",
-    "pipeline-cli": "NickPhura/pipeline-cli#master"
+    "pipeline-cli": "git+https://github.com/NickPhura/pipeline-cli.git"
   },
   "devDependencies": {
     "prettier": "~2.3.2"
