--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -26,7 +26,7 @@ jobs:
           echo Git Pull Request Ref: ${{ github.event.pull_request.head.sha }}
           echo Git Event Name: ${{ github.event_name }}
           echo Git Event Action: ${{ github.event.action }}
-          echo Git Labels: "$LABELS"
+          echo Git Branch Ref: ${{ github.head_ref }}
           echo PR in Draft: ${{ github.event.pull_request.draft }}
 
   # Scale down any existing OpenShift pods for this PR deployment
