--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -386,7 +386,7 @@ objects:
     status:
       ingress: null
   - kind: HorizontalPodAutoscaler
-    apiVersion: autoscaling/v1
+    apiVersion: autoscaling/v2beta2
     metadata:
       annotations: {}
       creationTimestamp: null
@@ -396,8 +396,13 @@ objects:
       minReplicas: ${{REPLICAS}}
       maxReplicas: ${{REPLICAS_MAX}}
       scaleTargetRef:
-        apiVersion: v1
+        apiVersion: apps.openshift.io/v1
         kind: DeploymentConfig
         name: ${NAME}${SUFFIX}
-      cpuUtilization:
-        targetPercentage: 95
+      metrics:
+        - type: Resource
+          resource:
+            name: cpu
+            target:
+              type: Utilization
+              averageUtilization: 80
