--- a/api/.pipeline/templates/queue.dc.yaml
+++ b/api/.pipeline/templates/queue.dc.yaml
@@ -273,7 +273,7 @@ objects:
       name: ${NAME}${SUFFIX}
     type: Opaque
   - kind: HorizontalPodAutoscaler
-    apiVersion: autoscaling/v1
+    apiVersion: autoscaling/v2beta2
     metadata:
       annotations: {}
       creationTimestamp: null
@@ -283,8 +283,13 @@ objects:
       minReplicas: ${{REPLICAS}}
       maxReplicas: ${{REPLICAS_MAX}}
       scaleTargetRef:
-        apiVersion: v1
+        apiVersion: apps.openshift.io/v1
         kind: DeploymentConfig
         name: ${NAME}${SUFFIX}
-      cpuUtilization:
-        targetPercentage: 95
+      metrics:
+        - type: Resource
+          resource:
+            name: cpu
+            target:
+              type: Utilization
+              averageUtilization: 80
