--- a/app/.pipeline/templates/app.dc.yaml
+++ b/app/.pipeline/templates/app.dc.yaml
@@ -1,9 +1,9 @@
-apiVersion: template.openshift.io/v1
 kind: Template
+apiVersion: template.openshift.io/v1
 metadata:
-  resourceVersion: ''
-  selfLink: ''
   name: biohub-platform-app-dc
+  labels:
+    build: biohub-platform-app
 parameters:
   - name: NAME
     value: biohub-platform-app
@@ -47,10 +47,6 @@ parameters:
   - name: REACT_APP_KEYCLOAK_CLIENT_ID
     description: Client Id for application
     required: true
-  - name: REACT_APP_KEYCLOAK_INTEGRATION_ID
-    description: integration Id
-  - name: REACT_APP_KEYCLOAK_API_HOST
-    description: api host
   - name: CPU_REQUEST
     value: '50m'
   - name: CPU_LIMIT
@@ -136,8 +132,6 @@ objects:
                   value: ${REACT_APP_KEYCLOAK_CLIENT_ID}
                 - name: REACT_APP_KEYCLOAK_REALM
                   value: ${REACT_APP_KEYCLOAK_REALM}
-                - name: REACT_APP_KEYCLOAK_INTEGRATION_ID
-                  value: ${REACT_APP_KEYCLOAK_INTEGRATION_ID}
               image: ' '
               imagePullPolicy: Always
               name: app
@@ -239,8 +233,8 @@ objects:
       wildcardPolicy: None
     status:
       ingress: null
-  - apiVersion: autoscaling/v1
-    kind: HorizontalPodAutoscaler
+  - kind: HorizontalPodAutoscaler
+    apiVersion: autoscaling/v2beta2
     metadata:
       annotations: {}
       creationTimestamp: null
@@ -250,8 +244,13 @@ objects:
       minReplicas: ${{REPLICAS}}
       maxReplicas: ${{REPLICAS_MAX}}
       scaleTargetRef:
-        apiVersion: v1
+        apiVersion: apps.openshift.io/v1
         kind: DeploymentConfig
         name: ${NAME}${SUFFIX}
-      cpuUtilization:
-        targetPercentage: 95
+      metrics:
+        - type: Resource
+          resource:
+            name: cpu
+            target:
+              type: Utilization
+              averageUtilization: 80
