--- a/database/.pipeline/templates/db.dc.yaml
+++ b/database/.pipeline/templates/db.dc.yaml
@@ -148,7 +148,7 @@ objects:
       name: '${DATABASE_SERVICE_NAME}'
       role: db
     spec:
-      replicas: '${{REPLICAS}}'
+      replicas: ${{REPLICAS}}
       selector:
         name: '${DATABASE_SERVICE_NAME}'
         role: db
@@ -246,12 +246,12 @@ objects:
                 successThreshold: 1
                 failureThreshold: 10
               resources:
-                requests:
-                  cpu: '${CPU_REQUEST}'
-                  memory: '${MEMORY_REQUEST}'
                 limits:
-                  cpu: '${CPU_LIMIT}'
-                  memory: '${MEMORY_LIMIT}'
+                  cpu: ${CPU_LIMIT}
+                  memory: ${MEMORY_LIMIT}
+                requests:
+                  cpu: ${CPU_REQUEST}
+                  memory: ${MEMORY_REQUEST}
               securityContext:
                 capabilities: {}
                 privileged: false
