* Add GeoService for fetching data from WFS/WMS services. * Add BcgwService for handling calls to specific layers. * Add GeoJSON Zod Schemas. * Add Logic to decorate Regions in EML. * Add spatial constants to Api (copied from App).

--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -289,6 +289,7 @@ jobs:
   buildQueue:
     name: Build Queue Image
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     if: ${{ github.event.pull_request.merged == true }}
     env:
       PR_NUMBER: ${{ github.event.number }}
@@ -544,6 +545,7 @@ jobs:
   deployQueue:
     name: Deploy Queue Image
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     if: ${{ github.event.pull_request.merged == true }}
     env:
       PR_NUMBER: ${{ github.event.number }}
