--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@elastic/elasticsearch": "~8.1.0",
     "adm-zip": "~0.5.5",
     "ajv": "~8.6.3",
+    "avj": "0.0.0",
     "aws-sdk": "^2.1391.0",
     "axios": "~0.21.4",
     "clamdjs": "~1.0.2",
@@ -41,6 +42,7 @@
     "fast-json-patch": "~3.1.1",
     "fast-xml-parser": "~4.1.3",
     "fastq": "^1.15.0",
+    "json-schema-traverse": "^1.0.0",
     "jsonpath-plus": "~7.2.0",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
