--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "^2.1391.0",
     "axios": "~0.21.4",
     "clamdjs": "~1.0.2",
+    "dayjs": "^1.11.10",
     "db-migrate": "~0.11.11",
     "db-migrate-pg": "~1.2.2",
     "express": "~4.17.1",
@@ -49,7 +50,6 @@
     "knex": "~2.4.2",
     "lodash": "~4.17.21",
     "mime": "~2.5.2",
-    "moment": "^2.29.4",
     "multer": "~1.4.3",
     "object-inspect": "~1.12.3",
     "openapi-request-validator": "~11.0.0",
