--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
+    "dayjs": "^1.11.10",
     "dompurify": "^2.4.0",
     "express": "~4.17.1",
     "formik": "~2.2.6",
@@ -61,7 +62,6 @@
     "leaflet.locatecontrol": "~0.79.0",
     "leaflet.markercluster": "~1.5.3",
     "lodash-es": "~4.17.21",
-    "moment": "~2.29.2",
     "node-sass": "~4.14.1",
     "oidc-client-ts": "^3.0.0-rc.0",
     "pug": "^3.0.2",
