--- a/app/.pipeline/templates/app.dc.yaml
+++ b/app/.pipeline/templates/app.dc.yaml
@@ -234,7 +234,7 @@ objects:
     status:
       ingress: null
   - kind: HorizontalPodAutoscaler
-    apiVersion: autoscaling/v2beta2
+    apiVersion: autoscaling/v2
     metadata:
       annotations: {}
       creationTimestamp: null
